--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Contact</title>
 </head>
 <body>
-    <h1>Welcome to the Home Page</h1>
-    <p>This is the home page of our Django application.</p>
+    <h1>Contact Us</h1>
+    <p>This is the contact page of our Django application.</p>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'about' %}" target="_blank">About</a></li>
             <li><a href="{% url 'contact' %}">Contact</a></li>
         </ul>
     </nav>
