--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to the Home Page</h1>
     <p>This is the home page of our Django application.</p>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-        </ul>
-    </nav>
-</body>
+    <h2>Your Lucky Number is: {{ lucky_number }}</h2>
+    <ol>
+      {% for vegetable in vegetables %} {% comment %} logs {% endcomment %}
+      <li>{{vegetable}}</li>
+      {% endfor %}
+    </ol>
+    {% if person_age < 18 %}
+    <h1>You can vote</h1>
+    {%else%}
+    <h1>You cannot vote</h1>
+    {%endif%}
+
+    <p>S.no | Name | Population | Country | Flag</p>
+    {%for city in cities %}
+    <p>
+      {{forloop.counter}} | {{city.name}} | {{city.population}} |
+      {{city.country}} | {% if city.country == "USA" %} 🇺🇸 {% elif city.country
+      == "Japan" %} 🇯🇵 {% else %} ENG {% endif %}
+    </p>
+    {%endfor%}
+  </body>
 </html>
