--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
+    <title>Django + Tailwind CSS</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body style="background: #3929d4; color: white;">
+  <body >
     {% block start%}
     
     {%endblock%}
