--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,19 +1,19 @@
-{% extends "base.html" %}
-
-{% block start %}
-{% include "image.html" %}
+{% extends "base.html" %} {% block start %} {% include "image.html" %}
 <h1>Welcome to the Home Page</h1>
-    <p>This is the home page of our Django application.</p>
-    <h2>Your Lucky Number is: {{ lucky_number }}</h2>
-    <ol>
-      {% for vegetable in vegetables %} {% comment %} logs {% endcomment %}
-      <li>{{vegetable}}</li>
-      {% endfor %}
-    </ol>
-    {% if person_age < 18 %}
-    <h1>You can vote</h1>
-    {%else%}
-    <h1>You cannot vote</h1>
-    {%endif%}
+<p>This is the home page of our Django application.</p>
+<h2>Your Lucky Number is: {{ lucky_number }}</h2>
+<ol>
+  {% for vegetable in vegetables %} {% comment %} logs {% endcomment %}
+  <li>{{vegetable}}</li>
+  {% endfor %}
+</ol>
+{% if person_age < 18 %}
+<h1>You can vote</h1>
+{%else%}
+<h1>You cannot vote</h1>
+{%endif%}
 
-{% endblock  %}
+<h1 class="text-3xl text-blue-800 font-medium ">
+      Hello world!
+    </h1>
+{% endblock %}
